# agent-simple-RAG

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: client.py  client_api.py  connect_milvus.py
backend/agent/: model.py  module.py  prompt.py  react.py  state.py  tool_call.py
front/my-app/: package-lock.json  package.json
front/my-app/app/: page.js  page.module.css
