[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "langchain>=0.3.26",
    "langchain-cli>=0.0.36",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.24",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.4.8",
    "pdfplumber>=0.11.7",
    "pypdf>=5.6.0",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
