[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi[standard]>=0.115.13",
    "langchain>=0.3.26",
    "langchain-cli>=0.0.36",
    "langchain-community>=0.3.26",
    "langchain-huggingface>=0.3.0",
    "langchain-milvus>=0.2.1",
    "langchain-openai>=0.3.24",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.4.8",
    "pdfplumber>=0.11.7",
    "pymilvus>=2.5.11",
    "pypdf>=5.6.0",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.46.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
